# passgen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
passgen/: CMakeLists.txt  passgen.cpp  passgen.h
